# realtime-fact-checker-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  pyproject.toml
backend/: config.py  main.py  schemas.py
backend/agents/: _retry.py  claim_extractor.py  context.py  graph.py  root.py  search.py  transcriber.py  trusted_source.py  verdict.py  video_extractor.py
backend/ingestion/: chunker.py  live_hls.py  recorded.py  transcript.py  youtube.py
backend/runtime/: dedupe.py  firestore_cache.py  runner.py  session_manager.py
backend/tools/: google_search.py  trusted_fetch.py
backend/transport/: pubsub.py  sse.py  ws.py
frontend/: app.js  index.html  overlay.css
infra/: cloudrun.yaml  firestore_indexes.json  pubsub_topics.sh
scripts/: demo_live.sh  demo_recorded.sh  deploy.sh  run_local.sh  seed_trusted_allowlist.py  setup-trigger.sh
tests/: test_chunker.py  test_claim_schema.py  test_dedupe.py  test_graph_smoke.py  test_prompts.py  test_retry.py  test_runner_fallback.py  test_transcript_buffer.py  test_transcript_full_coverage.py  test_video_mode.py
