[project]
name = "hackathon-io"
version = "0.1.0"
description = "Live Reality Fact-Check Overlay for YouTube videos using Google ADK + Gemini Flash"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=0.2.0",
    "google-genai>=0.8.0",
    "google-cloud-firestore>=2.16.0",
    "google-cloud-pubsub>=2.21.0",
    "yt-dlp>=2025.1.0",
    "ffmpeg-python>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
